samples/_failures_safe/1761172709_4aa6f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1982a788.c:174: error: expected ‘;’, ‘,’ or ‘)’ at end of input
